# mythical_fun

./: .gitignore  Cargo.toml  README.md  Rocket.toml
dev_templates/: add_event.html.tera  events.html.tera  index.html.tera  layout.html.hbs
dev_templates/events/: add.html.hbs  list.html.hbs  old_list.html.tera
dev_templates/users/: login.html.hbs  signup.html.hbs  signup.html.tera
dev_templates/utils/: err_alert.html.hbs  navbar.html.hbs
old_src/: lib.rs  main.rs  models.rs  old_structs.rs  schema.rs
prod_templates/: 2021.html.tera  add_event.html.tera  bootstrap.html.tera  index.html.hbs  index.html.tera
prod_templates/utils/: message.html.tera
scripts/: run_as_prod.sh
src/: db.rs  lib.rs  main.rs  modals.rs  models.rs  routes.rs  structs.rs
src/db/: events.rs  models.rs  schema.rs  structs.rs  users.rs
src/routes/: events.rs  guards.rs  structs.rs  users.rs
src/structs/: events.rs  rocket.rs
