[package]
name = "fun_mythicalcloud_xyz"
version = "0.1.0"
authors = ["MythicalBeast1789 <cameronbodie@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.19"
diesel = { version = "1.4.4", features = ["postgres", "chrono"] }
dotenv = "0.15.0"

[dependencies.rocket_contrib]
version = "0.4.6"
default-features = false
features = ["json", "templates", "tera_templates", "serve"]

